# nba-stats-scraper

./: .coveragerc  .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  7pm_verification_bug_report_20260118_1632.txt  BIGQUERY-QUOTA-SOLUTION-2026-01-06.md  CLAUDE.md  CLOUD-SHELL-DEPLOY.sh  COPY-PASTE-NEW-SESSION.txt  COPY_TO_NEXT_CHAT.txt  DEPLOYMENT-QUOTA-FIX.md  DEPLOYMENT_PLAN_COMPLETENESS_ROLLOUT.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  Dockerfile  Dockerfile.backup.1767328630  Dockerfile.backup.1767419704  Dockerfile.backup.1768762166  Dockerfile.mlb-worker  Dockerfile.service  GOOD_MORNING_START_HERE.md  Makefile  Makefile.advanced  NEW_SESSION_PROMPT.md  NEXT-CHAT-PROMPT.txt  NEXT-SESSION-START-HERE.md  NOW.md  PIPELINE_SCAN_REPORT_2026-01-01.md  Procfile  QUICK-HANDOFF.md  README.md  SCORE_FIX_SUMMARY.md  SCRAPER_UPDATE_PLAN.md  SECURITY-AUDIT-2025-12-31.md  SECURITY-REMEDIATION-2025-12-31.md  SESSION-107-FINAL-SUMMARY.txt  SESSION-82-START-PROMPT.md  cloudbuild-functions.yaml  cloudbuild-mlb-grading.yaml  (+39 more)
.claude/: claude_project_instructions.md
.pre-commit-hooks/: check_date_comparisons.py  check_import_paths.py  check_odds_snapshot_filter.py  validate_all_schemas.py  validate_auto_deploy_consistency.py  validate_bettingpros_queries.py  validate_bq_sql_patterns.py  validate_cloud_function_symlinks.py  validate_code_quality.py  validate_deploy_safety.py  validate_dockerfile_imports.py  validate_dockerfiles.py  validate_model_references.py  validate_partition_filters.py  validate_pipeline_patterns.py  validate_python_syntax.py  validate_schema_fields.py  validate_schema_types.py  validate_scraper_config_tables.py  validate_scraper_download_override.py  validate_set_secrets.py  validate_signal_references.py  validate_sql_fstrings.py  validate_sql_queries.py  validate_threshold_drift.py  validate_view_filters.py
2026-01-21-incident-resolution/: 2026-01-21-CRITICAL-FIX-COMPLETE.md  2026-01-21-CRITICAL-HANDOFF.md  2026-01-21-MONITORING-IMPROVEMENTS.md  README.md
analytics_backfill/: README.md
analytics_processors/: Dockerfile  analytics_base.py  main_analytics_service.py
backfill_jobs/: README.md  (+2 more)
(+9115 files in other folders)
